--- a/adm.html
+++ b/adm.html
@@ -221,10 +221,21 @@
                 const equipRef = doc(db, 'artifacts', commonAppId, 'public', 'data', 'settings', 'equipment');
                 onSnapshot(equipRef, (s) => {
                     if (s.exists()) {
-                        this.state.equipmentList = s.data().list || [];
+                        const data = s.data().list || [];
+                        // Migração: se for string, converte para objeto
+                        this.state.equipmentList = data.map(item => {
+                            if (typeof item === 'string') return { name: item, external: true };
+                            return item;
+                        });
                     } else {
                         // Inicializar lista se não existir
-                        setDoc(equipRef, { list: ["HPLC - Agilent 1260 Infinity (CR.001)", "Espectrômetro FT-IR (SB.008)", "Outro / Não Listado"] });
+                        setDoc(equipRef, {
+                            list: [
+                                { name: "HPLC - Agilent 1260 Infinity (CR.001)", external: true },
+                                { name: "Espectrômetro FT-IR (SB.008)", external: true },
+                                { name: "Outro / Não Listado", external: true }
+                            ]
+                        });
                     }
                     this.render();
                 });
@@ -286,7 +297,9 @@
                 this.state.allocationForm = {
                     id: req.id,
                     name: req.name,
-                    equipment: req.equipment,
+                    equipment: req.equipmentTags || req.equipment,
+                    requestedPeriod: req.reservationPeriod || 'Não informado',
+                    usageReason: req.usageReason || 'Não informado',
                     date: req.date || new Date().toISOString().split('T')[0],
                     startTime: req.startTime || '08:00',
                     endTime: req.endTime || '12:00',
@@ -324,31 +337,38 @@
             findNextFreeSlot() {
                 const fd = this.state.allocationForm;
                 const approved = this.state.requests.filter(r => r.status === 'approved');
-                let currentDate = new Date(fd.date);
+                let currentDate = new Date(fd.date + 'T12:00:00'); // Evitar problemas de timezone
+
+                // Mapeamento de horários do Admin
+                const schedule = {
+                    1: { name: 'Tarde', start: '12:00', end: '17:00' }, // Seg
+                    2: { name: 'Manhã', start: '09:00', end: '12:00' }, // Ter
+                    3: { name: 'Tarde', start: '12:00', end: '17:00' }, // Qua
+                    4: { name: 'Manhã', start: '09:00', end: '12:00' }, // Qui
+                    5: { name: 'Manhã', start: '09:00', end: '13:00' }  // Sex
+                };
 
                 // Procurar nos próximos 60 dias
                 for (let i = 0; i < 60; i++) {
-                    const dateStr = currentDate.toISOString().split('T')[0];
-                    const morningReserved = approved.find(r => r.date === dateStr && r.startTime === '08:00' && r.equipment === fd.equipment);
-                    const afternoonReserved = approved.find(r => r.date === dateStr && r.startTime === '14:00' && r.equipment === fd.equipment);
+                    const dayOfWeek = currentDate.getDay();
+                    const slot = schedule[dayOfWeek];
 
-                    if (!morningReserved) {
-                        this.state.allocationForm.date = dateStr;
-                        this.state.allocationForm.startTime = '08:00';
-                        this.state.allocationForm.endTime = '12:00';
-                        this.render();
-                        return;
-                    }
-                    if (!afternoonReserved) {
-                        this.state.allocationForm.date = dateStr;
-                        this.state.allocationForm.startTime = '14:00';
-                        this.state.allocationForm.endTime = '18:00';
-                        this.render();
-                        return;
+                    if (slot) {
+                        const dateStr = currentDate.toISOString().split('T')[0];
+                        const isReserved = approved.find(r => r.date === dateStr && r.startTime === slot.start && r.equipment === fd.equipment);
+
+                        if (!isReserved) {
+                            this.state.allocationForm.date = dateStr;
+                            this.state.allocationForm.startTime = slot.start;
+                            this.state.allocationForm.endTime = slot.end;
+                            this.render();
+                            this.showNotification(`Sugerindo: ${currentDate.toLocaleDateString('pt-BR', { weekday: 'long' })}, ${slot.start} às ${slot.end}`);
+                            return;
+                        }
                     }
                     currentDate.setDate(currentDate.getDate() + 1);
                 }
-                this.showNotification("Nenhum horário livre encontrado nos próximos 60 dias", "error");
+                this.showNotification("Nenhum horário livre encontrado na agenda do Admin.", "error");
             },
 
             async deleteRequest(id) {
@@ -362,7 +382,7 @@
             openManualAllocation() {
                 this.state.manualAllocationForm = {
                     name: '', org: 'Laboratório',
-                    equipment: this.state.equipmentList[0] || '',
+                    equipment: this.state.equipmentList.length > 0 ? this.state.equipmentList[0].name : '',
                     date: new Date().toISOString().split('T')[0],
                     startTime: '08:00', endTime: '12:00',
                     requestId: null
@@ -379,7 +399,7 @@
             openManualAllocationWithData(date, start, end) {
                 this.state.manualAllocationForm = {
                     name: '', org: 'Laboratório',
-                    equipment: this.state.equipmentList[0] || '',
+                    equipment: this.state.equipmentList.length > 0 ? this.state.equipmentList[0].name : '',
                     date, startTime: start, endTime: end,
                     requestId: null
                 };
@@ -445,10 +465,21 @@
                 const name = prompt("Nome do novo equipamento:");
                 if (!name) return;
                 try {
-                    const newList = [...this.state.equipmentList, name];
+                    const newList = [...this.state.equipmentList, { name, external: true }];
                     await setDoc(doc(db, 'artifacts', commonAppId, 'public', 'data', 'settings', 'equipment'), { list: newList });
                     this.showNotification("Equipamento adicionado");
                 } catch (e) { this.showNotification("Erro ao adicionar", "error"); }
+            },
+
+            async toggleEquipmentExternal(eqName) {
+                try {
+                    const newList = this.state.equipmentList.map(eq => {
+                        if (eq.name === eqName) return { ...eq, external: !eq.external };
+                        return eq;
+                    });
+                    await setDoc(doc(db, 'artifacts', commonAppId, 'public', 'data', 'settings', 'equipment'), { list: newList });
+                    this.showNotification("Visibilidade atualizada");
+                } catch (e) { this.showNotification("Erro ao atualizar visibilidade", "error"); }
             },
 
             triggerCSVImport() {
@@ -606,8 +637,8 @@
 
                                 if (tag && name) {
                                     const fullName = `${name}${brand ? ' - ' + brand : ''}${model ? ' ' + model : ''} (${tag})`;
-                                    if (!newList.includes(fullName)) {
-                                        newList.push(fullName);
+                                    if (!newList.some(e => e.name === fullName)) {
+                                        newList.push({ name: fullName, external: false });
                                     }
                                 }
                             }
@@ -628,10 +659,10 @@
                 e.target.value = ''; // Reset
             },
 
-            async removeEquipment(eq) {
-                if (!confirm(`Remover "${eq}" da lista?`)) return;
+            async removeEquipment(eqName) {
+                if (!confirm(`Remover "${eqName}" da lista?`)) return;
                 try {
-                    const newList = this.state.equipmentList.filter(item => item !== eq);
+                    const newList = this.state.equipmentList.filter(item => item.name !== eqName);
                     await setDoc(doc(db, 'artifacts', commonAppId, 'public', 'data', 'settings', 'equipment'), { list: newList });
                     this.showNotification("Equipamento removido");
                 } catch (e) { this.showNotification("Erro ao remover", "error"); }
@@ -741,8 +772,8 @@
                                     <thead class="bg-slate-50/50 border-b border-slate-100">
                                         <tr>
                                             <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest">Pesquisador</th>
-                                            <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest">Equipamento</th>
-                                            <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest">Data / Hora</th>
+                                            <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest">Equipamentos (TAGs)</th>
+                                            <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest">Período Solicitado</th>
                                             <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest text-center">Status</th>
                                             <th class="px-6 py-4 text-[10px] font-black uppercase text-slate-400 tracking-widest text-right">Ações</th>
                                         </tr>
@@ -755,10 +786,13 @@
                                                     <div class="font-bold text-sm text-slate-900">${r.name}</div>
                                                     <div class="text-[10px] text-slate-400">${r.org || 'Laboratório'}</div>
                                                 </td>
-                                                <td class="px-6 py-4 text-sm font-medium text-slate-700">${r.equipment}</td>
-                                                <td class="px-6 py-4 text-[11px] font-bold text-slate-500">
-                                                    ${r.date ? r.date.split('-').reverse().join('/') : 'S/D'}<br>
-                                                    <span class="text-[9px] text-slate-400">${r.startTime || ''} às ${r.endTime || ''}</span>
+                                                <td class="px-6 py-4">
+                                                    <div class="text-sm font-bold text-slate-700">${r.equipmentTags || r.equipment || 'S/ TAG'}</div>
+                                                    ${r.usageReason ? `<div class="text-[9px] text-slate-400 italic mt-1 truncate max-w-[150px]" title="${r.usageReason}">${r.usageReason}</div>` : ''}
+                                                </td>
+                                                <td class="px-6 py-4">
+                                                    <div class="text-[11px] font-bold text-slate-600">${r.reservationPeriod || 'Não informado'}</div>
+                                                    ${r.date ? `<div class="text-[9px] text-emerald-600 bg-emerald-50 px-1 inline-block rounded mt-1">Definido: ${r.date.split('-').reverse().join('/')}</div>` : ''}
                                                 </td>
                                                 <td class="px-6 py-4 text-center">
                                                     <span class="px-2.5 py-1 rounded-full text-[10px] font-black uppercase tracking-wider ${r.status === 'approved' ? 'bg-emerald-100 text-emerald-700' :
@@ -811,10 +845,17 @@
                             ${this.state.equipmentList.map(eq => `
                                 <div class="card p-6 flex flex-col justify-between">
                                     <div class="flex items-start justify-between mb-4">
-                                        <div class="p-3 bg-blue-50 text-blue-600 rounded-2xl"><i data-lucide="microscope" class="w-6 h-6"></i></div>
-                                        <button onclick="app.removeEquipment('${eq}')" class="p-2 text-slate-300 hover:text-red-500 hover:bg-red-50 rounded-lg transition-colors"><i data-lucide="trash-2" class="w-4 h-4"></i></button>
+                                        <div class="flex gap-2">
+                                            <div class="p-3 bg-blue-50 text-blue-600 rounded-2xl"><i data-lucide="microscope" class="w-6 h-6"></i></div>
+                                            <button onclick="app.toggleEquipmentExternal('${eq.name}')" 
+                                                class="flex items-center gap-2 px-3 py-1 rounded-xl text-[10px] font-black uppercase tracking-widest transition-all ${eq.external ? 'bg-emerald-50 text-emerald-600 border border-emerald-100' : 'bg-slate-100 text-slate-400 border border-slate-200'}">
+                                                <i data-lucide="${eq.external ? 'eye' : 'eye-off'}" class="w-3 h-3"></i>
+                                                ${eq.external ? 'Público' : 'Privado'}
+                                            </button>
+                                        </div>
+                                        <button onclick="app.removeEquipment('${eq.name}')" class="p-2 text-slate-300 hover:text-red-500 hover:bg-red-50 rounded-lg transition-colors"><i data-lucide="trash-2" class="w-4 h-4"></i></button>
                                     </div>
-                                    <h3 class="font-extrabold text-slate-800 leading-tight">${eq}</h3>
+                                    <h3 class="font-extrabold text-slate-800 leading-tight">${eq.name}</h3>
                                 </div>
                             `).join('')}
                         </div>
@@ -842,10 +883,22 @@
                             </div>
 
                             <div class="p-6 space-y-5 bg-white">
-                                <div class="p-4 bg-slate-50 rounded-2xl border border-slate-100">
-                                    <div class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-1">Solicitante</div>
-                                    <div class="font-bold text-slate-800">${fd.name}</div>
-                                    <div class="text-xs text-slate-500 font-medium mt-0.5">${fd.equipment}</div>
+                                <div class="p-4 bg-slate-50 rounded-2xl border border-slate-100 space-y-3">
+                                    <div>
+                                        <div class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-1">Solicitante</div>
+                                        <div class="font-bold text-slate-800">${fd.name}</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-1">TAGs Solicitadas</div>
+                                        <div class="text-xs text-slate-600 font-bold">${fd.equipment}</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-1">Período e Necessidade</div>
+                                        <div class="text-[11px] text-slate-500 font-medium leading-relaxed">
+                                            📅 ${fd.requestedPeriod}<br>
+                                            📝 ${fd.usageReason}
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="space-y-1.5">
@@ -867,9 +920,18 @@
                                     </div>
                                 </div>
 
-                                <button onclick="app.findNextFreeSlot()" type="button" class="w-full bg-blue-50 text-blue-600 py-3 rounded-xl text-[10px] font-black uppercase tracking-widest hover:bg-blue-100 transition-all flex items-center justify-center gap-2">
-                                    <i data-lucide="search" class="w-4 h-4"></i> Sugerir Próximo Dia Livre
+                                <button onclick="app.findNextFreeSlot()" type="button" class="w-full bg-blue-50 text-blue-600 py-3 rounded-xl text-[10px] font-black uppercase tracking-widest hover:bg-blue-100 transition-all flex items-center justify-center gap-2 border border-blue-100">
+                                    <i data-lucide="calendar-search" class="w-4 h-4"></i> Buscar Sugestão na Agenda Admin
                                 </button>
+
+                                <div class="p-3 bg-slate-50 border border-slate-100 rounded-xl">
+                                    <span class="text-[9px] font-black text-slate-400 uppercase tracking-tighter mb-1 block">Horários do Responsável:</span>
+                                    <div class="grid grid-cols-2 gap-x-4 gap-y-1 text-[9px] font-bold text-slate-500">
+                                        <span>Seg/Qua: 12h às 17h</span>
+                                        <span>Ter/Qui: 09h às 12h</span>
+                                        <span>Sex: 09h às 13h</span>
+                                    </div>
+                                </div>
 
                                 <div class="pt-2 grid grid-cols-2 gap-3">
                                     ${phoneClean ? `
@@ -936,7 +998,7 @@
                                     <label class="text-[10px] font-black uppercase text-slate-400 tracking-widest ml-1">Equipamento</label>
                                     <select required class="w-full bg-slate-100 border-2 border-slate-200 p-4 rounded-2xl text-sm font-bold text-slate-900 focus:bg-white focus:border-blue-500 transition-all outline-none"
                                         onchange="app.handleManualInputChange('equipment', this.value)">
-                                        ${this.state.equipmentList.map(eq => `<option value="${eq}" ${fd.equipment === eq ? 'selected' : ''}>${eq}</option>`).join('')}
+                                        ${this.state.equipmentList.map(eq => `<option value="${eq.name}" ${fd.equipment === eq.name ? 'selected' : ''}>${eq.name}</option>`).join('')}
                                     </select>
                                 </div>
 
